# short-url-system

./: .gitignore
backend/: pyproject.toml
backend/short_url_service/: config.py  main.py
backend/short_url_service/lib/: UrlDatabase.py
backend/short_url_service/test/: UrlDataBaseTest.py  UrlHandleTest.py
backend/short_url_service/util/: UrlHandle.py
mysql/: init.sql
